# sutazaiapp

./: .bandit  .bashrc.extension  .claude_optimized  .code_quality.conf  .coderabbit.yml  .coverage  .coverage.DESKTOP-I534C9S.2598533.XrZUHWRx.wgw3  .coverage.DESKTOP-I534C9S.298633.XWMqwMkx.wgw3  .coveragerc  .cspell.json  .deployment_completed  .deployment_config  .deployment_status  .dockerignore  .editorconfig  .env  .env.agents  .env.backup.20250216_014852  .env.backup.20250724_170437  .env.backup.20250725_005647  .env.backup.20250725_014213  .env.backup.20250725_014441  .env.example  .env.ollama  .env.production  .env.template  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .logs_config  .markdownlint.json  .mcp-optimized.json  .mcp.json  .mcp.json.backup-20250815-115401  .mcp.json.bak-2025-08-11_214201  .mcp.json.bak-2025-08-11_215605  .mcp.json.bak-2025-08-11_224649  .mcp.json.bak-2025-08-11_224748  .mcp.json.bak-2025-08-11_224850  (+1270 more)
.mcp/chroma/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.mcp/chroma/src/: CHANGELOG.md
mcp-manager/: CHANGELOG.md  COMPREHENSIVE_MCP_REPORT.md  FINAL_MCP_VALIDATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MCP_BACKEND_ARCHITECTURE_REVIEW.md  README.md  benchmark_mcp.py  benchmark_mcp_focused.py  claude_task_runner_server.py  fixed_claude_task_runner.py  install.sh  install_official_servers.sh  latency_test.py  manager.py  mcp  monitor_mcp_performance.py  pyproject.toml  quick_benchmark.py  quick_test.py  simple_mcp_wrapper.py  test_mcp_protocol_compliance.py  test_mcp_servers.py  test_results.md
mcp-manager/.claude-flow/metrics/: performance.json  task-metrics.json
mcp-manager/benchmark_results/: FINAL_BENCHMARK_SUMMARY.md  PERFORMANCE_ANALYSIS_REPORT.md  monitor_20250826_124331.json  quick_benchmark_20250826_123849.json
mcp-manager/config/: default.yaml  mcp-servers.json
mcp-manager/memory-bank/: activeContext.md
mcp-manager/scripts/: install.sh
mcp-manager/src/mcp_manager/: __init__.py  cli.py  connection.py  discovery.py  fixed_task_runner.py  health.py  interface.py  manager.py  models.py
mcp-manager/test_venv/: pyvenv.cfg
mcp-manager/tests/: test_fixed_task_runner.py
mcp-servers/claude-task-runner/: BACKEND_CONFIGURATION_AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ULTRATHINK_INFRASTRUCTURE_RESTORATION_REPORT.md  pyproject.toml
mcp-servers/claude-task-runner/config/: CHANGELOG.md
mcp-servers/claude-task-runner/docs/: API_SYSTEM_CONFIGURATION_AUDIT.md  CHANGELOG.md  COMPREHENSIVE_SYSTEM_ARCHITECTURE_AUDIT_REPORT.md  CONTRIBUTING.md  FRONTEND_SYSTEM_AUDIT_REPORT.md  IMPLEMENTATION_PLAN.md  K3S_CONTAINER_ORCHESTRATION_ANALYSIS.md  MCP_INFRASTRUCTURE_SCALING_ANALYSIS.md  MESH_EXPANSION_VALIDATION_REPORT.md  QUICKSTART.md  REFACTOR_3_LAYER.md  REFACTOR_SUMMARY.md  TASK_FORMAT.md  TASK_PLAN_GUIDE.md
mcp-servers/claude-task-runner/images/: CHANGELOG.md
mcp-servers/claude-task-runner/input/: CHANGELOG.md  sample_tasks.md
mcp-servers/claude-task-runner/sample_project/: CHANGELOG.md  task_state.json
mcp-servers/claude-task-runner/screenshots/: CHANGELOG.md
mcp-servers/claude-task-runner/src/: CHANGELOG.md
mcp-servers/claude-task-runner/tests/: CHANGELOG.md
misc/: Dockerfile  README_SYSTEMD_SERVICES.md  __init__.py  debug_fix_script.py  fix_all_issues.py  fix_core_system_comprehensive.py  fix_one_file.py  get-pip.py  install_dependencies.sh  master_cleanup_reorganize.sh  master_system_optimizer.py  mypy_results.txt  optimize_requirements.py  pylint_results.txt  pyproject.toml  pyvenv.cfg  setup.cfg  setup.py  standardize_logging.py  super_comprehensive_check.py  system_checkup.py  system_maintenance.py
misc/advanced_system_analysis/: system_analyzer.py
misc/advanced_system_analysis/docs/: DEPENDENCY_MANAGEMENT_GUIDE.md
misc/agents/: knowledge_base.py
misc/app/: routes.py  utils.py
misc/config/: DIRECTORY_STRUCTURE.yml  __init__.py  ai_config.yml  code_policy.yml  config_manager.py  docker-compose-ai.yml  performance_optimization_config.yml  prometheus.yml  service_mesh.yaml  system_config.yaml  system_integration_config.yml  system_optimization_report.json  system_verification_report.json  tasks.json
misc/config/config/: project_config.yaml  ultimate_optimization_report.json
misc/core_system/: DamerauLevenshtein_py.py  Hamming.py  Indel.py  Indel_py.py  Jaro.py  LCSseq.py  Levenshtein.py  Levenshtein_py.py  OSA.py  OSA_py.py  Postfix.py  Prefix_py.py  __init__.py  _api.py  _apply_pyprojecttoml.py  _ast_gen.py  _checkers.py  _completion_shared.py  _cryptography_key.py  _css_builtins.py  _emoji_replace.py  _entry_points.py  _framework_compat.py  _functions.py  _generate_schema.py  _generics.py  _hypothesis_plugin.py  _importhook.py  _importlib.py  _initialize_py.py  _internal_dataclass.py  _jwe_algorithms.py  _known_annotated_metadata.py  _lasso_builtins.py  _macos.py  _mock_val_ser.py  _model_construction.py  _modified.py  _msvccompiler.py  _mysql_builtins.py  (+531 more)
misc/core_system/core_system/: dependency_management.py  deploy.py
misc/core_system/exceptions/: advanced_exceptions.py
misc/core_system/performance/: performance_monitor.py
misc/core_system/scaling/: auto_scaler.py
misc/core_system/security/: README.md
misc/core_system/utils/: advanced_config_manager.py  (+4 more)
misc/docs/: AGENT_DEVELOPMENT_GUIDELINES.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_MANAGEMENT_STRATEGY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  INSTALLATION_GUIDE.md  LOGGING_GUIDE.md  MASTER_PLAN_PHASE1_2.md  MIT.txt  PERFORMANCE_OPTIMIZATION_STRATEGY.md  README_ARCHITECTURAL_INTEGRITY_MANAGER.md  README_DEPENDENCY_CROSS_REFERENCING.md  README_INVENTORY_MANAGEMENT_SYSTEM.md  README_SYSTEMD_SERVICES.md  SUTAZAI_MASTER_PLAN.md  SYSTEM_ANALYSIS_GUIDE.md  SYSTEM_INTEGRATION_GUIDE.md  SystemArchitecture.md  TESTING_STRATEGY.md  requirements.txt
misc/scaling/: __init__.py
misc/storage/: raft_state.json
misc/system_integration/: system_integrator.py
misc/tests/: test_main.py
misc/typings/: fitz.pyi
misc/ui/: App.vue
misc/utils/: dependency_manager.py  subprocess_utils.py
(+16395 files in other folders)
