[build-system]
requires==LATEST_SECURE
build-backend = "setuptools.build_meta"

[project]
name = "sutazai-testing"
version = "1.0.0"
description = "SutazAI Multi-Agent Task Automation Platform"
authors = [
    {name = "SutazAI Team", email = "team@sutazai.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python==LATEST_SECURE
keywords = ["automation", "ai", "testing", "deployment", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core testing
"pytest==LATEST_SECURE
"pytest-asyncio==LATEST_SECURE
"pytest-cov==LATEST_SECURE
"pytest-xdist==LATEST_SECURE
"pytest-mock==LATEST_SECURE
"pytest-timeout==LATEST_SECURE
"pytest-html==LATEST_SECURE
"pytest-benchmark==LATEST_SECURE
    
    # HTTP testing
"httpx==LATEST_SECURE
"requests==LATEST_SECURE
"requests-mock==LATEST_SECURE
"responses==LATEST_SECURE
    
    # Database testing
"pytest-postgresql==LATEST_SECURE
"pytest-redis==LATEST_SECURE
"sqlalchemy==LATEST_SECURE
"alembic==LATEST_SECURE
    
    # Web testing
"selenium==LATEST_SECURE
"webdriver-manager==LATEST_SECURE
"playwright==LATEST_SECURE
"beautifulsoup4==LATEST_SECURE
    
    # API testing
"fastapi[all]==LATEST_SECURE
"uvicorn==LATEST_SECURE
"starlette==LATEST_SECURE
    
    # Frontend testing
"streamlit==LATEST_SECURE
    
    # Data & Analytics
"pandas==LATEST_SECURE
"numpy==LATEST_SECURE
"plotly==LATEST_SECURE
    
    # Performance & Monitoring
"locust==LATEST_SECURE
"memory-profiler==LATEST_SECURE
"psutil==LATEST_SECURE
    
    # Security testing
"bandit==LATEST_SECURE
"safety==LATEST_SECURE
    
    # Mocking & Fixtures
"factory-boy==LATEST_SECURE
"faker==LATEST_SECURE
"freezegun==LATEST_SECURE
"responses==LATEST_SECURE
    
    # Utilities
"python-dotenv==LATEST_SECURE
"pyyaml==LATEST_SECURE
"click==LATEST_SECURE
"rich==LATEST_SECURE
"typer==LATEST_SECURE
]

[project.optional-dependencies]
dev = [
"black==LATEST_SECURE
"isort==LATEST_SECURE
"flake8==LATEST_SECURE
"mypy==LATEST_SECURE
"pre-commit==LATEST_SECURE
]

docs = [
"sphinx==LATEST_SECURE
"sphinx-rtd-theme==LATEST_SECURE
"myst-parser==LATEST_SECURE
]

performance = [
"line_profiler==LATEST_SECURE
"pympler==LATEST_SECURE
"objgraph==LATEST_SECURE
]

security = [
"bandit[toml]==LATEST_SECURE
"safety==LATEST_SECURE
"pip-audit==LATEST_SECURE
]

[project.urls]
Homepage = "https://github.com/sutazai/sutazai-agi"
Documentation = "https://docs.sutazai.com"
Repository = "https://github.com/sutazai/sutazai-agi.git"
"Bug Tracker" = "https://github.com/sutazai/sutazai-agi/issues"

[project.scripts]
sutazai-test = "scripts.test_runner:main"
sutazai-load-test = "scripts.load_test:main"
sutazai-security-scan = "scripts.security_scan:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*", "tests*", "scripts*"]
exclude = ["*.tests", "*.tests.*", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "frontend/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov=frontend", 
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--junitxml=test-results.xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "performance: Performance tests",
    "security: Security tests",
    "frontend: Frontend tests",
    "backend: Backend tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "api: API tests",
    "database: Database tests",
    "websocket: WebSocket tests",
    "auth: Authentication tests",
    "docker: Docker container tests",
    "load: Load testing",
    "smoke: Smoke tests",
    "regression: Regression tests",
    "critical: Critical path tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend", "frontend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.ruff]
# Add other global Ruff settings here if needed
# line-length = 88 

exclude = [
    "core/optimized_pb2.py",
    "core/optimized_pb2_grpc.py",
    "*/tests/*",
    "*/test_*",
]

[tool.ruff.lint.per-file-ignores]
# Ignore F403 (star-import) and F405 (undefined-name-from-star-import) 
# specifically for the pwiz.py script within the virtual environment.
"venv-sutazaiapp/bin/pwiz.py" = ["F403", "F405"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Start with this, refine later
check_untyped_defs = true     # Check bodies of functions without type hints
disallow_untyped_defs = false # Allow untyped functions for now (gradual typing)
no_implicit_optional = true  # Don't default Optional[T] for None defaults
warn_redundant_casts = true
warn_unused_ignores = true   # Report ignores that are no longer needed
show_error_codes = true      # Show error codes like [import]

# Per-module settings can be added later if needed
# e.g., [tool.mypy-some_legacy_module]
# disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"] 