[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-manager"
version = "1.0.0"
description = "Dynamic MCP Management System - Orchestrator for Model Context Protocol servers"
authors = [
    {name = "SutazAI System", email = "admin@sutazai.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    # Official MCP SDK
    "mcp>=1.0.0",
    
    # Core dependencies
    "asyncio-throttle>=1.0.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
    "watchdog>=3.0.0",
    
    # HTTP and networking
    "httpx>=0.25.0",
    "websockets>=12.0",
    
    # Configuration and serialization
    "toml>=0.10.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # Monitoring and health checks
    "psutil>=5.9.0",
    "prometheus-client>=0.18.0",
    
    # Data validation and security
    "cryptography>=41.0.0",
    "jsonschema>=4.19.0",
    
    # Process management
    "supervisor>=4.2.5",
]

[project.scripts]
mcp-manager = "mcp_manager.cli:main"
mcp-orchestrator = "mcp_manager.orchestrator:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.287",
    "pre-commit>=3.4.0",
]

[project.urls]
"Homepage" = "https://github.com/sutazai/mcp-manager"
"Documentation" = "https://mcp-manager.sutazai.com"
"Repository" = "https://github.com/sutazai/mcp-manager"
"Bug Tracker" = "https://github.com/sutazai/mcp-manager/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "B", "I", "N", "UP", "ANN", "S", "C4", "PIE", "T20", "RET", "SIM", "ARG", "ERA", "PL"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --cov=mcp_manager --cov-report=html --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"