[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sutazai_app"
version = "0.1.0"
description = "Autonomous AI Development Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langdetect>=1.0.9",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "black>=25.1.0",
    "mypy>=1.8.0",
    "safety>=3.0.0",
    "pytest>=8.0.0",
]

[tool.pylint.master]
py-version = "3.11"
ignore = ["CVS"]
persistent = "yes"

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0511",  # TODO comments
    "R0903",  # too-few-public-methods
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true 