[metadata]
name = sutazai
version = 0.1.0
description = SutazAI Core System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sutazai/core
author = SutazAI Team
license = MIT

[options]
python_requires = >=3.11
packages = find:
include_package_data = True
install_requires = 
    pydantic>=2.6.4
    pydantic-settings>=2.1.0
    fastapi>=0.109.0
    uvicorn>=0.27.0

[options.extras_require]
dev = 
    pytest>=7.3.1
    mypy>=1.3.0
    black>=24.1.1
    pylint>=3.0.3
    flake8>=7.0.0
    semgrep>=1.59.0
    bandit>=1.7.6
    safety>=3.0.1

[flake8]
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores = 
    __init__.py:F401

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True

[tool:pytest]
minversion = 7.0
addopts = -ra -q
testpaths = tests
python_files = test_*.py *_test.py
python_functions = test_*

[pylint]
py-version = 3.11
disable = 
    C0111,  # missing-docstring
    W0511   # TODO comments

[isort]
profile = black
py_version = 311

[bandit]
exclude_dirs = tests,venv
skips = B101  # Skip assert used as statements

[coverage:run]
source = core_system, backend
omit = 
    tests/*
    venv/*

[coverage:report]
exclude_lines = 
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.: 